--- a/container-build/Dockerfile
+++ b/container-build/Dockerfile
@@ -14,6 +14,6 @@ RUN sed -i "s/Listen 80/Listen 8080/g" /etc/httpd/conf/httpd.conf
 
 
 RUN chgrp -R 0 /var/log/httpd /var/run/httpd && \
-    chmod -R g=u
+    chmod -R g=u /var/log/httpd /var/run/httpd
 
 USER 1001
