--- a/movies/Jenkinsfile
+++ b/movies/Jenkinsfile
@@ -130,7 +130,7 @@ pipeline {
                 // TODO: Create a new app in staging and expose the service
                 sh '''
                         oc project ${STAGE_PROJECT}
-                        oc new-app --as-deployment-config --name ${APP_NAME} -i ${APP_NAME}:stage
+                        oc new-app  --name ${APP_NAME} -i ${APP_NAME}:stage
                         oc expose svc/${APP_NAME}
                    '''
             }
